# rule_segmenter

./: Cargo.toml  build.rs
data/: grapheme.json  sentence.json  w.json  word.json
src/: grapheme.rs  lib.rs  rule_segmenter.rs  sentence.rs  utils.rs  word.rs
tests/: grapheme_spec_test.rs  sentence_spec_test.rs  spec_test.rs  word_spec_test.rs
tools/: generate.py  generate_grapheme.py  generate_sentence.py  generate_word.py
